﻿Version 2.0
* Added ability to edit and delete weight entry
* Separated settings/about information
* Improved page navigation performance
* Overhaul of application's imagery
* Fixed several stability issues

Version 1.1
* Fixed several stability issues

Version 1.0
* First Version!