@@ -22,15 +22,14 @@
 namespace WeightWatch.Views
 {
     using System;
+    using System.IO;
     using System.Reflection;
     using System.Windows;
+    using System.Windows.Controls;
     using System.Windows.Controls.Primitives;
+    using System.Windows.Shapes;
     using Microsoft.Phone.Controls;
     using Microsoft.Phone.Tasks;
-    using System.Windows.Resources;
-    using System.IO;
-    using System.Windows.Shapes;
-    using System.Windows.Controls;
 
     public partial class About : PhoneApplicationPage
     {
