@@ -23,6 +23,7 @@
             <shell:ApplicationBarIconButton IconUri="/Images/AppBar/appbar.add.rest.png" Text="add weight" Click="AppBarIconClick_AddWeight"/>
             <shell:ApplicationBar.MenuItems>
                 <shell:ApplicationBarMenuItem Text="Settings" Click="AppBarIconClick_Settings"/>
+                <shell:ApplicationBarMenuItem Text="Export" Click="AppBarIconClick_Export"/>
                 <shell:ApplicationBarMenuItem Text="About" Click="AppBarIconClick_About"/>
             </shell:ApplicationBar.MenuItems>
         </shell:ApplicationBar>
