@@ -19,6 +19,8 @@
  * THE SOFTWARE.
  */
 
+using Microsoft.Phone.Tasks;
+
 namespace WeightWatch.Views
 {
     using System;
@@ -208,6 +210,18 @@ namespace WeightWatch.Views
             Dispatcher.BeginInvoke(() => NavigationService.Navigate(new Uri("/Views/Settings.xaml", UriKind.Relative)));
         }
 
+        private void AppBarIconClick_Export(object sender, EventArgs e)
+        {
+            var weightListModel = new WeightListModel();
+            var csv = weightListModel.Export();
+
+            var email = new EmailComposeTask
+                            {
+                                Body = csv,
+                            };
+            email.Show();
+        }
+
         private void AppBarIconClick_About(object sender, EventArgs e)
         {
             Dispatcher.BeginInvoke(() => NavigationService.Navigate(new Uri("/Views/About.xaml", UriKind.Relative)));
@@ -226,6 +240,11 @@ namespace WeightWatch.Views
         }
 
         #endregion Event Handlers
+
+        private void ApplicationBarMenuItem_Click(object sender, EventArgs e)
+        {
+
+        }
 
     }
 }
